...
    @SerializedName("created_at") val createdAt: Date,
    @SerializedName("updated_at") val updatedAt: Date?
)

enum class IssueSource {
    @SerializedName("CALL") CALL,
    @SerializedName("EMAIL") EMAIL,
    @SerializedName("APP_WEB") APP_WEB,
    @SerializedName("CHATBOT") CHATBOT,
    @SerializedName("APP_MOBILE") APP_MOBILE,
    @SerializedName("OTHER") OTHER;

    companion object {
...
    @SerializedName("created_at") val createdAt: Date,
    @SerializedName("updated_at") val updatedAt: Date?
)

enum class UserChannel {
    @SerializedName("EMAIL") EMAIL,
    @SerializedName("SMS") SMS;

    companion object {
        fun fromValue(value: String) = entries.find { it.name == value } ?: EMAIL
    }

}
...
