...
            "29/02/2024 18:50:33",
            "Abierto"
        ),
    )

    Scaffold(
        floatingActionButton = {
            FloatingActionButton(
                onClick = {
                    navController.navigate(CreateIssue.route)
                },
                containerColor = MaterialTheme.colorScheme.secondary
            ) {
...
